remove sine wave target

--- a/osc_2_in/BUILD.bazel
+++ b/osc_2_in/BUILD.bazel
@@ -11,6 +11,9 @@ ros2_interface_library(
         "OSCMujocoState.msg",
         "OSCTorqueCommand.msg",
         "OSCTaskspaceTargets.msg",
+        "Command.msg",
+        "MotorCommand.msg",
+        "WheelMotorCommand.msg",        
     ],
     deps = [
         "@ros2_common_interfaces//:std_msgs",
